# Quartet

./: .eslintrc.cjs  .eslintrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  devbuild.yml  release.yml  test.yml
patcher/: .gitignore  dub.json  dub.selections.json
patcher/source/: cli.d  common.d
patcher/src/: cli.d  common.d
patches/: idb-keyval@6.2.0.patch
qpatcher/: Cargo.toml
qpatcher/src/: main.rs  patcher.rs  paths.rs
scripts/: build.mjs  build.ts
src/: Quartet.ts  QuartetBeryl.ts  constants.ts  globals.d.ts  ipc.ts  loader.ts  modules.d.ts  patcher.ts  preload.ts  types.ts
src/api/: constants.ts  index.ts  internal.ts  objects.ts  settings.ts
src/browser/: content.ts  shims.ts
src/components/: QuartetConfig.svelte  QuartetConfigMenu.svelte
src/plugins/: autoLogin.ts  core.ts  devtools.ts  untrack.ts
src/plugins/assetManager/: index.ts
src/plugins/assetManager/components/: SkinSetting.svelte
