[package]
name = "qpatcher"
authors = ["Justice Almanzar <superdash993@gmail.com>", "Sofia Lima <me@dzshn.xyz>"]
description = "Quartet TETR.IO patcher"
repository = "https://github.com/dzshn/Quartet"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["cargo", "help"] }
nix = { version = "0.26.2", features = ["fs"]}
owo-colors = "3.5.0"
supports-color = "2.0.0"
ureq = "2.6.2"

[profile.release]
lto = true
panic = "abort"
